[package]
name = "expense_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.27.0"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.24", features = ["derive"] }
sqlx = { version = "0.7", features = [
  "runtime-tokio-native-tls",
  "sqlite",
  "chrono",
  "macros",
], default-features = false }
tokio = { version = "1.39.2", features = ["full", "macros"] }
crossterm = "0.28.1"
